// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation Modal should render with custom title and description 1`] = `
<div>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 overflow-overlay"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="relative flex flex-col p-10 overflow-hidden rounded-2.5xl bg-theme-background shadow-2xl"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bfBhNR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold text-theme-text"
          >
            My Title
          </h2>
          <div
            class="flex-1"
          >
            <svg
              class="w-3/5 m-auto my-8"
            >
              generic-warning.svg
            </svg>
            <div
              class="text-theme-secondary-text whitespace-pre-line"
            >
              My Description
            </div>
            <div
              data-testid="ConfirmationModal"
            >
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
                  data-testid="ConfirmationModal__no-button"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    No
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS"
                  data-testid="ConfirmationModal__yes-button"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <span>
                      Yes
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Confirmation Modal should render with default title and description 1`] = `
<div>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 overflow-overlay"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="relative flex flex-col p-10 overflow-hidden rounded-2.5xl bg-theme-background shadow-2xl"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bfBhNR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold text-theme-text"
          >
            Confirmation
          </h2>
          <div
            class="flex-1"
          >
            <svg
              class="w-3/5 m-auto my-8"
            >
              generic-warning.svg
            </svg>
            <div
              class="text-theme-secondary-text whitespace-pre-line"
            >
              Are you sure you wish to navigate away from this page without saving?
            </div>
            <div
              data-testid="ConfirmationModal"
            >
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
                  data-testid="ConfirmationModal__no-button"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    No
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS"
                  data-testid="ConfirmationModal__yes-button"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <span>
                      Yes
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
